# Nuclei-Template-MCP

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  generate-template.yml
examples/: .mcp-nuclei.toml  README.md
examples/eval/: idor-order-endpoint.json  sample-sqli.json
examples/outputs/: idor-order-endpoint.yaml
examples/requests/: idor-order-endpoint.req  idor-order-endpoint.resp  sample-idor.req  sample-sqli.req  ssti-search.curl
src/mcp_nuclei/: __init__.py  cli.py  config.py
src/mcp_nuclei/core/: __init__.py  batch.py  builder.py  dedup.py  eval.py  generator.py  history.py  importers.py  improver.py  lint.py  notify.py  parser.py  plugins.py  validator.py  verify.py  watch.py  workflow.py
src/mcp_nuclei/mcp/: __init__.py  cache.py  client.py  metering.py  pricing.py  retry.py
src/mcp_nuclei/prompts/: auth-bypass.txt  base.txt  cmdi.txt  cors.txt  idor.txt  lfi.txt  open-redirect.txt  sqli.txt  ssrf.txt  ssti.txt  template_improver.txt  xss.txt  xxe.txt
src/mcp_nuclei/utils/: http.py  validate.py
tests/: test_batch_concurrent.py  test_builder.py  test_cache_metering_pricing.py  test_cli.py  test_cli_v4.py  test_client.py  test_config.py  test_dedup.py  test_eval.py  test_explain.py  test_generator.py  test_generator_extra.py  test_history.py  test_http_utils.py  test_importers.py  test_improver_batch.py  test_lint.py  test_notify.py  test_openapi_importer.py  test_parser.py  test_plugins.py  test_retry.py  test_validator.py  test_verify.py  test_verify_extra.py  test_watch.py  test_workflow.py
