[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-nuclei"
version = "0.1.0"
description = "MCP-powered Nuclei template generator: turn a raw HTTP request into a high-quality Nuclei template using LLM reasoning instead of naive curl-to-yaml conversion."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ishfaq Bhat" }]
keywords = ["nuclei", "security", "mcp", "llm", "template-generator", "vulnerability-scanning", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.34.0"]
openai = ["openai>=1.30.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
]

[project.scripts]
mcp-nuclei = "mcp_nuclei.cli:app"

[project.urls]
Homepage = "https://github.com/Iamishfaq07/Nuclei-Template-MCP"
Repository = "https://github.com/Iamishfaq07/Nuclei-Template-MCP"
Issues = "https://github.com/Iamishfaq07/Nuclei-Template-MCP/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcp_nuclei = ["prompts/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
